# knitting-app

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: do-todo.md  sync-docs.md
app/: cache.py  config.py  main.py  matching.py  models.py  ravelry_client.py  service.py
app/static/: app.js  index.html
docs/: changelog.md  decisions.md  feedback.md  priorities.md  roadmap.md  spec.md  todo.md
docs/.obsidian/: workspace.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: PatternResultsScreen.module.css  PatternResultsScreen.tsx  YarnConfirmScreen.module.css  YarnConfirmScreen.tsx  YarnSearchScreen.module.css  YarnSearchScreen.tsx
tests/: conftest.py  test_cache.py  test_matching.py  test_models.py  test_service.py
